# AppX

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_kv_records.sql  0002_create_code_snippets.sql  0003_create_clipboard_assistant.sql  0004_create_clipboard_fts.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: ipc.rs  menu.rs  mod.rs  tray.rs
src-tauri/src/app/app_lock/: commands.rs  guard.rs  mod.rs  model.rs  runtime.rs  state.rs  storage.rs
src-tauri/src/app/clipboard/: files.rs  image.rs  mod.rs  transient.rs
src-tauri/src/app/clipboard/rich/: mod.rs
src-tauri/src/app/clipboard_assistant/: access.rs  app_icon.rs  cache.rs  cleanup.rs  commands.rs  db.rs  enricher.rs  fts.rs  history.rs  mod.rs  model.rs  palette.rs  palette_geometry.rs  protocol.rs  session.rs  sounds.rs  state.rs  thumb.rs
src-tauri/src/app/clipboard_assistant/ingest/: classifier.rs  mod.rs  pipeline.rs  reader.rs
src-tauri/src/app/clipboard_assistant/payload/: apply.rs  mod.rs
src-tauri/src/app/clipboard_assistant/settings/: mod.rs  model.rs
src-tauri/src/app/clipboard_assistant/storage/: ingest.rs  list.rs  mod.rs  mutate.rs  payload.rs  rich_sidecar.rs
src-tauri/src/app/code_snippets/: commands.rs  mod.rs  model.rs  permissions.rs  registry.rs  session.rs
src-tauri/src/app/crypto/: cipher.rs  commands.rs  format.rs  key.rs  mod.rs
src-tauri/src/app/editor/: cipher.rs  commands.rs  convert.rs  format.rs  mod.rs  passphrase_store.rs  tree.rs
src-tauri/src/app/focus_target/: mod.rs
src-tauri/src/app/global_shortcut/: mod.rs
src-tauri/src/app/palette/: commands.rs  mod.rs  settings.rs
src-tauri/src/app/platform/: app_icon.rs  foreground.rs  macos_ax.rs  mod.rs
src-tauri/src/app/runtime/: mod.rs
src-tauri/src/app/security/: commands.rs  mod.rs  model.rs  passphrase.rs  storage.rs
src-tauri/src/app/settings/: storage.rs
src-tauri/src/app/text_delivery/: macos.rs  mod.rs
src-tauri/src/app/updates/: logging.rs  macos.rs  mod.rs
src-tauri/src/app/windows/: macos_clipboard_panel.rs  macos_close.rs  mod.rs
src-tauri/src/commands/: database.rs
src-tauri/src/database/: mod.rs
src-tauri/src/paths/: mod.rs
(+195 files in other folders)
