[package]
name = "appx"
version = "0.1.0"
description = "AppX desktop application"
authors = ["zezeping"]
edition = "2021"

[lib]
name = "appx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
tauri-plugin-biometry = "0.2.8"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
keyboard-types = "0.7"
once_cell = "1"
enigo = "0.3"
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
log = "0.4"
foreign-types = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSImage", "NSPasteboard", "NSRunningApplication", "NSWindow", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString", "NSURL"] }
core-graphics = "0.25"
core-foundation = "0.10"
